# ex_flasksd

./: .env.template  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
ex_flasksd/: __init__.py  __main__.py  api.py  ui.py
ex_flasksd/templates/: index.html
tests/: test_api.py
