[metadata]
name = ex_flasksd
version = attr:ex_flasksd.__version__
url = https://github.com/sgryjp/ex_flasksd
author = Suguru Yamamoto
author_email = sgryjp@gmail.com
license = MIT
description = Exercise Project: Streaming a response back from Flask server
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires =
  flask==1.1.*
  python-dotenv
  waitress==1.4.*

[options.extras_require]
dev =
    bandit
    black
    flake8
    isort
    mypy
    pydocstyle
    rope

[pydocstyle]
convention = numpy
